# reporag

./: .gitignore  README.md  devenv.nix  pyproject.toml  results_discovery.json  results_django.json  results_flow_eng_ai.json  results_reporag.json
.github/workflows/: ci.yml  release.yml
codebrain/: config.py  server.py
codebrain/indexer/: chunker.py  embedder.py  graph_builder.py  scip_indexer.py  semantic_text.py  sliding_window.py
codebrain/retrieval/: dense.py  reranker.py  rrf.py  sparse.py
codebrain/tools/: ask.py  index.py  index_status.py  memory.py  query.py  status.py  summarize.py  symbol.py
docs/: BENCHMARKS.md  CLIENTS.md  CONFIGURATION.md  codebase_rag_research.md
rag_mcp/: config.py  server.py
rag_mcp/indexer/: ast_parser.py  chunker.py  graph_builder.py  heuristic_graph.py  scip_indexer.py  semantic_text.py  sliding_window.py
rag_mcp/memory/: store.py
rag_mcp/retrieval/: dense.py  reranker.py  rrf.py  sparse.py
rag_mcp/tools/: architecture.py  ask.py  index.py  memory.py  query.py  summarize.py  symbol.py
reporag/: config.py  projects.py  server.py  setup.py
reporag/hooks/: reporag-autoindex.py  reporag-dupcheck.py  reporag-hint.py
reporag/indexer/: ast_parser.py  chunker.py  embedder.py  graph_builder.py  heuristic_graph.py  scip_indexer.py  scip_pb2.py  semantic_text.py  sliding_window.py
reporag/memory/: store.py
reporag/retrieval/: dense.py  pagerank.py  reranker.py  rrf.py  sparse.py
reporag/tools/: architecture.py  ask.py  find_existing.py  index.py  index_status.py  memory.py  query.py  status.py  summarize.py  symbol.py
scripts/: benchmark.py  generate_scip_pb2.py  llm_eval.py
scripts/claude-hooks/: reporag-autoindex.py  reporag-hint.py
tests/: test_chunker.py  test_dupcheck_hook.py  test_find_existing.py  test_get_symbol.py  test_heuristic_graph.py  test_index_lifecycle.py  test_memory.py  test_pagerank.py  test_project_intelligence.py  test_project_scoping.py  test_projects.py  test_query_code.py  test_retrieval_quality.py  test_rrf.py  test_server_daemon.py  test_setup.py  test_symbols.py
