[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebrain"
version = "0.1.0"
description = "Local-first RAG MCP server: AST chunking, SCIP graph, RRF+PPR retrieval"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.3",
    "scipy>=1.13.0",
    "bm25s>=0.2.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    # AST chunking — no torch, native extensions only
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    # SCIP protobuf parsing (heuristic fallback used if no SCIP CLI installed)
    "scip>=0.1.12",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
# Heavy ML stack — sentence-transformers pulls torch (~2GB)
ml = [
    "sentence-transformers>=3.0.0",
    "lancedb>=0.8.0",
    "pyarrow>=16.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
codebrain = "codebrain.server:main"

[tool.hatch.build.targets.wheel]
packages = ["codebrain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires ML extras and a live index (deselect with '-m not integration')",
]
