[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reporag"
version = "0.1.0"
description = "Local-first RAG MCP server: AST chunking, SCIP graph, RRF+PPR retrieval"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.0.0",
    "networkx>=3.3",
    "scipy>=1.13.0",
    "bm25s>=0.2.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    # AST chunking — no torch, native extensions only
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    # SCIP protobuf parsing (heuristic fallback used if no SCIP CLI installed)
    # scip PyPI package excluded — pulls aicsimageio→lxml (C build deps, unrelated)
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
# Heavy ML stack — sentence-transformers pulls torch (~2GB CUDA by default)
ml = [
    "sentence-transformers>=3.0.0",
    "lancedb>=0.8.0",
    "pyarrow>=16.0.0",
    "einops>=0.7.0",  # required by nomic-ai/nomic-embed-text-v1
    "torch>=2.0.0",
]
# Same as [ml] but torch comes from the CPU-only PyTorch index (~250 MB).
# Requires uv — pip ignores [tool.uv.sources]. Use when no GPU is available.
ml-cpu = [
    "sentence-transformers>=3.0.0",
    "lancedb>=0.8.0",
    "pyarrow>=16.0.0",
    "einops>=0.7.0",
    "torch>=2.0.0",
]
watch = [
    "watchdog>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "grpcio-tools>=1.60.0",  # protoc for regenerating scip_pb2.py
]

[project.scripts]
reporag = "reporag.server:main"

[tool.hatch.build.targets.wheel]
packages = ["reporag"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "UP007",  # X | Y union syntax — keep Optional for clarity in older IDEs
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # redefined fixtures are normal in pytest

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires ML extras and a live index (deselect with '-m not integration')",
]

# uv-only: redirect torch to CPU-only wheel when installing [ml-cpu].
# pip users must set UV_EXTRA_INDEX_URL + UV_INDEX_STRATEGY manually (see README).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "ml-cpu" },
]
